# tex

snowgoose/: CMakeLists.txt
snowgoose/expression/: .swp  CMakeLists.txt  expr.hpp  node.hpp  test  testexpr.cpp  testtex.dvi
snowgoose/expression/tex/: testtex.tex
